--- a/nbs/02_dialog_system.ipynb
+++ b/nbs/02_dialog_system.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "# Dialog System \n",
-    "> Class that implements the `question_response`, `new_question_answer` and `new_context` methods"
+    "> Implements the `question_response`, `new_question_answer` and `new_context` methods"
    ]
   },
   {
@@ -76,6 +76,12 @@
     "    When an instance is created, the 'run_shell_installs', 'load_and_prepare_data'\n",
     "    and 'load_qa_models' of the settings module  are called. Also the *data* and *qa_models* \n",
     "    attributes are created, they store the dataframes and models information, respectively.\\n\n",
+    "    \n",
+    "    \n",
+    "    If the dataframes are provided they must have the following columns:    \n",
+    "    \n",
+    "     1. context dataframe columns: 'topic', 'context'\n",
+    "     2. faq dataframe columns: 'Question, 'Answer'\n",
     "    '''\n",
     "    def __init__(\n",
     "        self,\n",
