--- a/nbs/03_chatbot.ipynb
+++ b/nbs/03_chatbot.ipynb
@@ -63,14 +63,16 @@
    "source": [
     "#export\n",
     "class ChatBot(DialogSystem):\n",
-    "    ''' This Bots implements the `DialogSystem` class methods as a form of conversation in \n",
-    "    a text interface. \\n\n",
+    "    ''' Inherits the `Dialog System` class and presents it as a conversation in a text interface. \\n\n",
     "    \n",
-    "    The Bot starts asking to introduce the desired question and returns a set of answers,\n",
+    "    The chatbot can be initialized by calling the method `chatbot` of an instance of the class.  \n",
+    "    \n",
+    "    Once the bot is initialized, it asks to introduce a question and returns a set of answers,\n",
     "    After this, asks if a better answer will be provided, if yes, asks for the type of answer\n",
     "    (context or FAQ), if not, starts again.\\n\n",
     "    \n",
-    "    The chatbot stops by calling the method chatbot() of an instance of the class.\n",
+    "    It can be exited by pressing Crtl+C keys.\n",
+    "    \n",
     "    '''\n",
     "    def __init__(\n",
     "        self,\n",
@@ -89,7 +91,7 @@
     "        '''\n",
     "\n",
     "        not_letter = 'y' if letter == 'n' else 'n'\n",
-    "        res = input(string)[0].lower()\n",
+    "        res = input(string).strip()[0].lower()\n",
     "        while True:\n",
     "            if res == letter:\n",
     "                return True\n",
@@ -131,7 +133,7 @@
     "\n",
     "        elif self.is_equal(\n",
     "                'If the answer will be given as a CONTEXT type \"yes\", ' +\n",
-    "                'otherwise type \"no\" [yes = Context, no = FAQ]', 'n'\n",
+    "                'otherwise type \"no\" [yes = Context, no = FAQ]: ', 'n'\n",
     "        ):\n",
     "            self.new_question_answer_interface()\n",
     "        else:\n",
@@ -170,7 +172,7 @@
        "\n",
        "> <code>ChatBot</code>(**`context_data_file`**=*`None`*, **`faq_data_file`**=*`None`*, **`configs_faq`**=*`None`*, **`download_models`**=*`True`*) :: [`DialogSystem`](/let_me_answer_for_you/dialog_system#DialogSystem)\n",
        "\n",
-       "This Bots implements the [`DialogSystem`](/let_me_answer_for_you/dialog_system#DialogSystem) class methods as a form of conversation in \n",
+       "The Bot implements the [`DialogSystem`](/let_me_answer_for_you/dialog_system#DialogSystem) class methods as a form of conversation in \n",
        "a text interface. \n",
        "\n",
        "\n",
@@ -249,7 +251,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.new_context\" class=\"doc_header\"><code>DialogSystem.new_context</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L104\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.new_context\" class=\"doc_header\"><code>DialogSystem.new_context</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L110\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>DialogSystem.new_context</code>(**`topic`**, **`context`**)\n",
        "\n",
@@ -289,7 +291,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.new_question_answer\" class=\"doc_header\"><code>DialogSystem.new_question_answer</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L83\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.new_question_answer\" class=\"doc_header\"><code>DialogSystem.new_question_answer</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L89\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>DialogSystem.new_question_answer</code>(**`question`**, **`answer`**)\n",
        "\n",
@@ -333,7 +335,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.question_answer\" class=\"doc_header\"><code>DialogSystem.question_answer</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L61\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.question_answer\" class=\"doc_header\"><code>DialogSystem.question_answer</code><a href=\"https://github.com/kikejimenez/let_me_answer_for_you/tree/master/let_me_answer_for_you/dialog_system.py#L67\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>DialogSystem.question_answer</code>(**`question`**)\n",
        "\n",
@@ -345,7 +347,7 @@
        "\n",
        "The method creates the following attributes:\n",
        "\n",
-       "- 'self.question' -> the question parameter \n",
+       "- 'self.question' -> the input parameter \n",
        "\n",
        "- 'self.responses' -> a dict of possible responses \n",
        "\n",
@@ -400,7 +402,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package perluniprops to\n",
+      "[nltk_data]     /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package perluniprops is already up-to-date!\n",
+      "[nltk_data] Downloading package nonbreaking_prefixes to\n",
+      "[nltk_data]     /home/jovyan/nltk_data...\n",
+      "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
+      "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Welcome to the Chatbot. To exit press Ctrl+C.\n",
+      "\n",
+      "\n",
+      " See you!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#test\n",
     "import tempfile\n",
