--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -16,14 +16,14 @@
    "metadata": {},
    "source": [
     "# Let Me Answer For You\n",
-    "> A Simple and Powerful Deep Learning Dialog System for Question and Answering \n"
+    "> A deep learning dialog system that answers specific and complex questions. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A chatbot and API that can answer specific and complex questions. Built on top of the  [deeppavlov library](https://deeppavlov.ai/) "
+    " Built on top of the  [deeppavlov library](https://deeppavlov.ai/) "
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the package is installed you can download the file `chatbot.py` of the repo and run: "
+    "Download the file `chatbot.py` of the [GitHub](https://github.com/kikejimenez/let_me_answer_for_you) repository and run: "
    ]
   },
   {
@@ -77,16 +77,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img alt=\"Exporting from nbdev\" width=\"1000\" \n",
-    "     caption=\"Example using Contexts\" \n",
-    "     src=\"images/spacex_chatbot_2.gif\" />"
+    "<img alt=\"Exporting from nbdev\" width=\"800\" \n",
+    "     caption=\"In this example neither the FAQ or context datasets have samples. After the first context is added, it appears as a reponse to the typed answer.\" \n",
+    "     src=\"images/context_spacex.gif\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, there was already an answer to the question and a new context was also added. The function `chatbot.py` accepts the *context* and *faq* files as their flags. If no flags for the files are provided, the system reads them (if inexistent, makes them) from the *data* directory at same path-level of `chatbot.py`"
+    "<img alt=\"Exporting from nbdev\" width=\"800\" \n",
+    "     caption=\"The example adds a new question-answer pair. The context of the first example also provides an answer.\" \n",
+    "     src=\"images/spacex_faq.gif\" />"
    ]
   },
   {
@@ -120,7 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `chatbot.py` module calls the `ChatBot` class in `let_me_answer_for_you.chatbot`. The `ChatBot` is the child of the `DialogSystem` class. This class lives in `let_me_answer_for_you.chatbot.dialog_system` and is composed of the  three main methods of the library:  \n",
+    "The package `let_me_answer_for_you` consists of three modules: [settings](/let_me_answer_for_you/settings), [dialog_system](/let_me_answer_for_you/dialog_system) and [chatbot](/let_me_answer_for_you/chatbot)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `chatbot.py` file of the repo, calls the `ChatBot` class in `chatbot` and is the child of the `DialogSystem` class in `dialog_system`. This last class  has the three main methods of the library:  \n",
     "\n",
     "  1. [question_answering](/let_me_answer_for_you/dialog_system#DialogSystem.question_answer)\n",
     "  2. [new_question_answer](/let_me_answer_for_you/dialog_system#DialogSystem.new_question_answer)\n",
@@ -131,21 +140,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first method retrieves a set of answers for a given question. The second method adds a new question-answer pair to the dataset and the third method adds a new context to the dataset. _These are the methods that may be exported as the API calls._"
+    "The first method retrieves a set of answers for a given question. The second method adds a new question-answer pair to the FAQ data and retrains the model. The third method adds a new context to the context data. _These are the methods that may be exported as the API calls._"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentation "
+    "#### [Read the Docs](/let_me_answer_for_you)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requirements"
+    "#### Requirements"
    ]
   },
   {
@@ -153,132 +162,6 @@
    "metadata": {},
    "source": [
     "The library has been tested in `python 3.7`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the configuration files by instantiating the `SystemClass` "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "from let_me_answer_for_you.dialog_system import DialogSystem()\n",
-    "\n",
-    "ds = DialogSystem( context_data_file=None,\n",
-    "        faq_data_file=None,\n",
-    "        configs_faq=None,\n",
-    "        download_models=True)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the **context_data_file** or the **faq_data_file** parameters are  `None` , a *data* directory will be created in the directory where the script is running. The data directory will contain the FAQ or the context CSV files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get Response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To get a response to a question call the method `question_answer` in the instance of  `SystemClass`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "```\n",
-    "ds.question_answer()\n",
-    "\n",
-    "Introduce question:\n",
-    "what can you offer me at Intekglobal?\n",
-    "\n",
-    "\n",
-    "what can you offer me at Intekglobal?:\n",
-    "\n",
-    "1: expert resources to connect your different devices and exchange data within those devices\n",
-    "2: Connect with us for further information\n",
-    "3: We like to provide world class solutions with complete features what you want to impletement in your business!\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## New Question-Answer Pair"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Populate the FAQ data file with a new question answer by calling the method `new_q_a`:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "ds.new_q_a()\n",
-    "\n",
-    "Introduce question:\n",
-    "What type of Dialog System is this?\n",
-    "\n",
-    "Introduce the answer:\n",
-    "Is a combination of context question answering system with a faq system\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## New Context"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The systems accept a response as a context. The advantage of having contexts is that many answers can be found in one context. To create a new context, call the `new_context` method:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "ds.new_context()\n",
-    "\n",
-    "Give context a title:\n",
-    " IOT\n",
-    "Introduce the context:\n",
-    "We can provide expert resources to connect your different devices and exchange data within those devices. Further make the data accessible via web tools. Connect with us for further information.   DevOps Our team can help you organization to implement best DevOps practices that can automate the processes between software development and various IT teams, in order that they can build, test, and release software faster and more reliably.\n",
-    "```"
    ]
   },
   {
@@ -292,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A container with all the configurations installed can be pulled it with the following instruction:"
+    "A container with all the configurations installed is available:"
    ]
   },
   {
