--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -95,6 +95,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the first example, neither the FAQ or context datasets have samples. After the first context is added, it appears as a reponse to the typed answer. The second example adds a new question-answer pair. The context of the first example also provides an answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Technologies"
    ]
   },
