--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Read the Docs](/let_me_answer_for_you)"
+    "#### [Read the Docs](/let_me_answer_for_you/index)"
    ]
   },
   {
