--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `chatbot.py` file of the repo, calls the `ChatBot` class in `chatbot` and is the child of the `DialogSystem` class in `dialog_system`. This last class  has the three main methods of the library:  \n",
+    "The `chatbot.py` file of the repo, calls the `ChatBot` class in `chatbot`. This class is a child of the `DialogSystem` class in `dialog_system`. The `DialogSystem`  class has the three main methods of the library:  \n",
     "\n",
     "  1. [question_answering](/let_me_answer_for_you/dialog_system#DialogSystem.question_answer)\n",
     "  2. [new_question_answer](/let_me_answer_for_you/dialog_system#DialogSystem.new_question_answer)\n",
